TestSuite/errors/err0032.pas
type IInt = interface
procedure Test;
end;

procedure IInt.Test;
begin
end;

begin

end.